# tidybrain

./: README.md  pyproject.toml
resources/: brain-sample.json
src/tidy_brain/: __main__.py  brain.py  transcription.py
src/tidy_brain/console/: interpreter.py
src/tidy_brain/transcriptables/: __init__.py  daily.py  project.py
src/tidy_brain/transcription/: __init__.py  entry.py  writers.py
src/tidy_brain/transcriptors/: file.py
src/tidybrain/: __main__.py  brain.py  transcription.py
src/tidybrain/console/: __init__.py  interpreter.py
src/tidybrain/transcriptables/: __init__.py  daily.py  project.py  tag.py
src/tidybrain/transcriptors/: file.py
