[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tidybrain"
version = "0.0.2"
authors = [{ name = "Martin GABORIT", email = "mgaborit.dev@gmail.com" }]
description = "Little tool to facilitate taking and processing notes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mgaborit/tidybrain"
Issues = "https://github.com/mgaborit/tidybrain/issues"
